src/parser/snapshots/antsi__parser__markup__tests__uppercase_alphabetic_content.snap
---
source: src/parser/markup.rs
expression: markup(&mut parser)
---
Some(
    Styled {
        content: [
            Content(
                "HELLO",
            ),
        ],
        style: Style {
            foreground: Some(
                Red,
            ),
            background: None,
            decoration: None,
        },
    },
)
